Phase 3: Complete Agentic Layer with 6 Tools + Comprehensive Documentation
- Implemented Tool Registry and Executor (MCP-like server)
- Added 6 tools: Weather, Time, Wikipedia, ArXiv, DuckDuckGo, HackerNews
- Integrated function calling with Gemini 2.0 Flash
- Multi-turn tool execution with conversation history
- Router now routes all tool queries to cloud

Tool Improvements:
- Wikipedia: Increased default sentences (3→10), improved disambiguation
- DuckDuckGo: Added automatic news search, increased results (5→10)
- All tools tested and verified working

Documentation:
- Added comprehensive Troubleshooting section to README
- Created CHANGELOG.md with detailed issue history
- Updated architecture.md to reflect Phase 3 completion
- Added MANUAL_TEST_PROMPTS.md for testing
- Documented all failures and resolutions

Fixes:
- Fixed conversation history format for multi-turn function calling
- Resolved DuckDuckGo deprecation warnings
- Improved tool error handling and reporting

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,16 @@
 # Core
 python-dotenv>=1.0.0
 
-# HTTP client for Ollama
+# HTTP client for Ollama and APIs
 httpx>=0.25.0
 
 # Type hints (Python 3.11+ has most, but some extras are useful)
 typing-extensions>=4.8.0
+
+# Tools - Knowledge
+wikipedia>=1.4.0
+arxiv>=2.1.0
+
+# Tools - Search
+duckduckgo-search>=6.0.0
 
