Fix DuckDuckGo package migration and rate limit handling
- Migrated from duckduckgo-search to ddgs package (v9.9.3)
- Added retry logic with exponential backoff for rate limits (3 attempts: 2s, 4s, 6s)
- Improved error messages suggesting HackerNews as alternative
- Fixed deprecation warnings with module-level suppression
- Updated all documentation (README, CHANGELOG, MANUAL_TEST_PROMPTS)
- Fixed chat.py tool name display issue
- Added test_query.py script for programmatic testing

Documentation updates:
- Added Known Limitations section to README
- Updated troubleshooting sections with rate limit info
- Documented package migration and retry logic
- Added guidance for handling rate limits

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,5 @@ wikipedia>=1.4.0
 arxiv>=2.1.0
 
 # Tools - Search
-duckduckgo-search>=6.0.0
+ddgs>=6.0.0  # DuckDuckGo search (renamed from duckduckgo-search)
 
