Complete Phase 4: RAG Pipeline with comprehensive documentation
- Implemented RAG pipeline with ChromaDB vector database
- Added document ingestion (TXT, MD, PDF) with local embeddings
- Fixed critical chunking infinite loop bug (stride calculation)
- Added comprehensive regression tests for chunking bug
- Updated all documentation:
  - README.md: Added RAG features, testing standards, bug fixes
  - CHANGELOG.md: Documented Phase 4 implementation and fixes
  - ERROR_LOG_ANALYSIS.md: Root cause analysis of chunking bug
  - TROUBLESHOOTING_RAG.md: RAG pipeline troubleshooting guide
  - .cursorrules: Added regression test and documentation standards
- Added full test suite (unit, integration, UAT tests)
- Updated architecture docs to reflect Phase 4 completion

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,13 @@ arxiv>=2.1.0
 # Tools - Search
 ddgs>=6.0.0  # DuckDuckGo search (renamed from duckduckgo-search)
 
+# RAG Pipeline (Phase 4)
+chromadb>=0.4.0  # Vector database for long-term memory
+sentence-transformers>=2.2.0  # Local embeddings (all-MiniLM-L6-v2)
+PyPDF2>=3.0.0  # PDF support (optional, for PDF ingestion)
+
+# Testing
+pytest>=7.4.0  # Testing framework
+pytest-asyncio>=0.21.0  # Async test support
+pytest-cov>=4.1.0  # Coverage reporting
+
