--- a/pytest.ini
+++ b/pytest.ini
@@ -13,11 +13,11 @@ log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 
-# Log file configuration (optional - uncomment to enable)
-# log_file = logs/pytest.log
-# log_file_level = INFO
-# log_file_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
-# log_file_date_format = %Y-%m-%d %H:%M:%S
+# Log file configuration
+log_file = logs/pytest.log
+log_file_level = INFO
+log_file_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
 
 # Output options
 addopts = 
