--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,8 @@ pytest>=7.4.0  # Testing framework
 pytest-asyncio>=0.21.0  # Async test support
 pytest-cov>=4.1.0  # Coverage reporting
 
+# Google Drive Sync (Phase 4.6)
+google-api-python-client>=2.100.0  # Google Drive API client
+google-auth-httplib2>=0.1.1  # HTTP transport for Google Auth
+google-auth-oauthlib>=1.1.0  # OAuth 2.0 for Google APIs
+
